[gd_scene load_steps=10 format=3 uid="uid://o0ou51n0ywi2"]

[ext_resource type="Script" path="res://node_3d.gd" id="1_2temp"]
[ext_resource type="AudioStream" uid="uid://s14abaxkvt1w" path="res://audio/SFX - Death Explosion.ogg" id="2_8sos7"]
[ext_resource type="AudioStream" uid="uid://d1f33r8ff226i" path="res://audio/SFX - Success.ogg" id="3_7gk6l"]
[ext_resource type="AudioStream" uid="uid://beevlr0hjwywg" path="res://audio/SFX - Main engine thrust.ogg" id="4_5c2g2"]
[ext_resource type="PackedScene" uid="uid://ux6ivcx1ovdp" path="res://booster_particles.tscn" id="5_6vtby"]
[ext_resource type="PackedScene" path="res://particles/explosion_particles.tscn" id="6_ns71s"]
[ext_resource type="PackedScene" path="res://particles/success_particles.tscn" id="7_2sg0g"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nbbyu"]

[sub_resource type="CylinderMesh" id="CylinderMesh_s5ee7"]

[node name="Node3D" type="RigidBody3D"]
transform = Transform3D(0.971669, 0, 0.236346, 0, 1, 0, -0.236346, 0, 0.971669, 0, 0, 0)
axis_lock_linear_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
contact_monitor = true
max_contacts_reported = 10
linear_damp = 3.03
angular_damp = 3.03
script = ExtResource("1_2temp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
shape = SubResource("CylinderShape3D_nbbyu")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
mesh = SubResource("CylinderMesh_s5ee7")

[node name="death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8sos7")

[node name="success" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7gk6l")

[node name="engine_thrust" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_5c2g2")

[node name="BoosterParticles" parent="." instance=ExtResource("5_6vtby")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.623896, 0)
emitting = false

[node name="left_booster" parent="." instance=ExtResource("5_6vtby")]
transform = Transform3D(-0.289296, 0.830146, 0.476619, 0.838665, -0.0202227, 0.544273, 0.461464, 0.557179, -0.690364, 0.0180713, 0.0879922, -0.0742949)

[node name="r_rocket_booster" parent="." instance=ExtResource("5_6vtby")]
transform = Transform3D(0.343179, -0.756363, -0.556905, 0.838665, -0.0202226, 0.544272, -0.42293, -0.653839, 0.627395, 0.0180713, 0.0879922, -0.0742949)

[node name="ExplosionParticles" parent="." instance=ExtResource("6_ns71s")]
transform = Transform3D(-0.289296, 0.830146, 0.476619, 0.838665, -0.0202227, 0.544273, 0.461464, 0.557179, -0.690364, 0.0180713, 0.0879922, -0.0742949)

[node name="SuccessParticles" parent="." instance=ExtResource("7_2sg0g")]
transform = Transform3D(-0.289296, 0.830146, 0.476619, 0.838665, -0.0202227, 0.544273, 0.461464, 0.557179, -0.690364, 0.0180713, 0.0879922, -0.0742949)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
